--- a/index.html
+++ b/index.html
@@ -95,11 +95,12 @@
         Yukiya. M
       </div>
       <div class="hidden md:flex gap-12 font-serif text-sm tracking-[0.15em] font-light">
-        <a href="#concept" class="hover:text-white transition-colors relative after:content-[''] after:absolute after:-bottom-2 after:left-0 after:w-0 after:h-[1px] after:bg-white hover:after:w-full after:transition-all after:duration-300">Concept</a>
-        <a href="#works" class="hover:text-white transition-colors relative after:content-[''] after:absolute after:-bottom-2 after:left-0 after:w-0 after:h-[1px] after:bg-white hover:after:w-full after:transition-all after:duration-300">Works</a>
-        <a href="#profile" class="hover:text-white transition-colors relative after:content-[''] after:absolute after:-bottom-2 after:left-0 after:w-0 after:h-[1px] after:bg-white hover:after:w-full after:transition-all after:duration-300">Profile</a>
-        <a href="#contact" class="hover:text-white transition-colors relative after:content-[''] after:absolute after:-bottom-2 after:left-0 after:w-0 after:h-[1px] after:bg-white hover:after:w-full after:transition-all after:duration-300">Contact</a>
-      </div>
+  <a href="#concept" class="hover:text-white transition-colors">Concept</a>
+  <a href="#works" class="hover:text-white transition-colors">Works</a>
+  <a href="./video.html" class="hover:text-white transition-colors">Video</a>
+  <a href="#profile" class="hover:text-white transition-colors">Profile</a>
+  <a href="#contact" class="hover:text-white transition-colors">Contact</a>
+</div>
     </div>
   </nav>
 
