--- a/video.html
+++ b/video.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Video Production | Yukiya. M</title>
+  <title>Video Production | SHU ARI</title>
   
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -62,7 +62,7 @@
   <nav id="navbar" class="fixed top-0 left-0 w-full z-50 transition-all duration-700 bg-transparent py-8">
     <div class="max-w-7xl mx-auto px-6 md:px-12 flex justify-between items-center">
       <a href="index.html" class="font-serif text-lg tracking-[0.2em] uppercase font-light cursor-pointer hover:opacity-70 transition-opacity">
-        Yukiya. M
+        SHU ARI
       </a>
       <div class="hidden md:flex gap-12 font-serif text-sm tracking-[0.15em] font-light items-center">
         <a href="index.html" class="hover:text-white text-white/50 transition-colors flex items-center gap-2">
