--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SHU ARI photo.n.movie.making | Portfolio</title>
+  <title>SHU ARI photo.n.movie.making | Documentary & Street Photographer</title>
+  <meta name="description" content="SHU ARIの公式ポートフォリオサイト。ドキュメンタリーやストリートを中心に、光と影が織りなすシネマティックな世界観を表現するフォトグラファー。作品・プロフィール・映像作品を掲載。">
+  <meta property="og:title" content="SHU ARI photo.n.movie.making | Documentary & Street Photographer">
+<meta property="og:description" content="光と影が織りなすシネマティックな世界観を描くフォトグラファー。ドキュメンタリー・ストリート・映像作品を掲載。">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://oneness-oki.com">
+<meta property="og:image" content="https://oneness-oki.com/ogp.jpg">
   
   <!-- Tailwind CSS (CDN) -->
   <script src="https://cdn.tailwindcss.com"></script>
