--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
     <!-- 背景画像 (パララックス効果) -->
     <div id="hero-bg"
       class="absolute inset-0 w-full h-[120%] -top-[10%] bg-cover bg-center bg-no-repeat transition-transform duration-100 ease-out"
-      style="background-image: url('https://images.unsplash.com/photo-1513326738677-b964603b136d?auto=format&fit=crop&q=80&w=2000')">
+      style="background-image: url('img/hero.jpg');">
+
       <!-- ダークオーバーレイ -->
       <div class="absolute inset-0 bg-[#0a0a0a]/70"></div>
     </div>
@@ -234,8 +235,7 @@
           <!-- Gallery Item 1 -->
           <div class="reveal reveal-up group cursor-pointer" style="transition-delay: 0ms">
             <div class="relative overflow-hidden w-full bg-black aspect-[3/4]">
-              <img src="https://images.unsplash.com/photo-1531123414780-f74242c2b052?auto=format&fit=crop&q=80&w=800"
-                alt="民族と色彩"
+              <img src="img/work1.jpg" alt="民族と色彩"
                 class="object-cover w-full h-full transition-all duration-1000 ease-out brightness-50 group-hover:brightness-100 group-hover:scale-105"
                 loading="lazy" />
               <div
@@ -248,8 +248,7 @@
           <!-- Gallery Item 2 -->
           <div class="reveal reveal-up group cursor-pointer" style="transition-delay: 200ms">
             <div class="relative overflow-hidden w-full bg-black aspect-[3/4]">
-              <img src="https://images.unsplash.com/photo-1513622470522-26c31136c1f1?auto=format&fit=crop&q=80&w=800"
-                alt="石畳の階段"
+              <img src="img/work2.jpg" alt="石畳の階段"
                 class="object-cover w-full h-full transition-all duration-1000 ease-out brightness-50 group-hover:brightness-100 group-hover:scale-105"
                 loading="lazy" />
               <div
@@ -266,8 +265,7 @@
           <!-- Gallery Item 3 -->
           <div class="reveal reveal-up group cursor-pointer" style="transition-delay: 100ms">
             <div class="relative overflow-hidden w-full bg-black aspect-[3/4]">
-              <img src="https://images.unsplash.com/photo-1517598024396-46c53fb391a1?auto=format&fit=crop&q=80&w=800"
-                alt="夜の街角"
+              <img src="img/work3.jpg" alt="夜の街角"
                 class="object-cover w-full h-full transition-all duration-1000 ease-out brightness-50 group-hover:brightness-100 group-hover:scale-105"
                 loading="lazy" />
               <div
@@ -280,8 +278,7 @@
           <!-- Gallery Item 4 -->
           <div class="reveal reveal-up group cursor-pointer" style="transition-delay: 300ms">
             <div class="relative overflow-hidden w-full bg-black aspect-[3/4]">
-              <img src="https://images.unsplash.com/photo-1514888286974-6c03e2ca1dba?auto=format&fit=crop&q=80&w=800"
-                alt="路地裏の猫"
+              <<img src="img/work4.jpg" alt="路地裏の猫"
                 class="object-cover w-full h-full transition-all duration-1000 ease-out brightness-50 group-hover:brightness-100 group-hover:scale-105"
                 loading="lazy" />
               <div
@@ -298,8 +295,7 @@
           <!-- Gallery Item 5 -->
           <div class="reveal reveal-up group cursor-pointer" style="transition-delay: 200ms">
             <div class="relative overflow-hidden w-full bg-black aspect-[3/4]">
-              <img src="https://images.unsplash.com/photo-1555529733-0e670560f8e1?auto=format&fit=crop&q=80&w=800"
-                alt="群衆と音楽"
+              <img src="img/work5.jpg" alt="群衆と音楽"
                 class="object-cover w-full h-full transition-all duration-1000 ease-out brightness-50 group-hover:brightness-100 group-hover:scale-105"
                 loading="lazy" />
               <div
@@ -312,8 +308,7 @@
           <!-- Gallery Item 6 -->
           <div class="reveal reveal-up group cursor-pointer" style="transition-delay: 400ms">
             <div class="relative overflow-hidden w-full bg-black aspect-[3/4]">
-              <img src="https://images.unsplash.com/photo-1494522855154-9297ac14b55f?auto=format&fit=crop&q=80&w=800"
-                alt="夕暮れのタクシー"
+              <img src="img/work6.jpg" alt="夕暮れのタクシー"
                 class="object-cover w-full h-full transition-all duration-1000 ease-out brightness-50 group-hover:brightness-100 group-hover:scale-105"
                 loading="lazy" />
               <div
@@ -333,8 +328,8 @@
     <div class="max-w-5xl mx-auto flex flex-col md:flex-row gap-16 items-center">
       <div class="reveal reveal-right w-full md:w-1/2">
         <div class="relative aspect-[3/4] w-full max-w-md mx-auto">
-          <img src="https://images.unsplash.com/photo-1618077360395-f3068be8e001?auto=format&fit=crop&q=80&w=800"
-            alt="Photographer" class="object-cover w-full h-full brightness-75" />
+          <img src="img/profile.jpg" alt="SHU ARI Portrait" class="object-cover w-full h-full brightness-75"
+            loading="lazy" />
           <!-- 装飾枠 -->
           <div class="absolute -inset-4 border border-white/10 hidden md:block"></div>
         </div>
