--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SHU ARI photo.n.movie.making | Documentary & Street Photographer</title>
+  <meta name="google-site-verification" content="6P7HaSW7ccI92Z8q0ktM5gSDIeejOFT3mNrf3Plm0Zo" />
   <meta name="description"
     content="SHU ARIの公式ポートフォリオサイト。ドキュメンタリーやストリートを中心に、光と影が織りなすシネマティックな世界観を表現するフォトグラファー。作品・プロフィール・映像作品を掲載。">
   <meta property="og:title" content="SHU ARI photo.n.movie.making | Documentary & Street Photographer">
