add google verification

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
       transform: translate(0, 0) scale(1);
     }
   </style>
+  <meta name="google-site-verification" content="6P7HaSW7ccI92Z8q0ktM5gSDIeejOFT3mNrf3Plm0Zo" />
 </head>
 
 <body class="bg-[#0a0a0a] min-h-screen text-[#e5e5e5] font-sans selection:bg-white/20 selection:text-white">
