Update video embed system and autoplay control

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <!-- 背景画像 (パララックス効果) -->
     <div id="hero-bg"
       class="absolute inset-0 w-full h-[120%] -top-[10%] bg-cover bg-center bg-no-repeat transition-transform duration-100 ease-out"
-      style="background-image: url('img/hero.jpg');">
+      style="background-image: url('img/8.png');">
 
       <!-- ダークオーバーレイ -->
       <div class="absolute inset-0 bg-[#0a0a0a]/70"></div>
@@ -221,11 +221,11 @@
             <h2 class="font-serif text-3xl md:text-4xl tracking-[0.15em] font-light mb-4">Works</h2>
             <p class="font-serif text-sm tracking-[0.1em] text-white/50">作品集 - 記憶の断片</p>
           </div>
-          <button
+          <a href="https://500px.com/p/photo_n_movie_making?view=photos" target="_blank" rel="noopener noreferrer"
             class="group flex items-center gap-4 text-sm font-serif tracking-widest text-white/70 hover:text-white transition-colors">
             VIEW ALL
             <i data-lucide="arrow-right" class="w-4 h-4 transition-transform group-hover:translate-x-2"></i>
-          </button>
+          </a>
         </div>
       </div>
 
@@ -236,7 +236,7 @@
           <!-- Gallery Item 1 -->
           <div class="reveal reveal-up group cursor-pointer" style="transition-delay: 0ms">
             <div class="relative overflow-hidden w-full bg-black aspect-[3/4]">
-              <img src="img/work1.jpg" alt="民族と色彩"
+              <img src="img/3.png" alt="民族と色彩"
                 class="object-cover w-full h-full transition-all duration-1000 ease-out brightness-50 group-hover:brightness-100 group-hover:scale-105"
                 loading="lazy" />
               <div
@@ -249,7 +249,7 @@
           <!-- Gallery Item 2 -->
           <div class="reveal reveal-up group cursor-pointer" style="transition-delay: 200ms">
             <div class="relative overflow-hidden w-full bg-black aspect-[3/4]">
-              <img src="img/work2.jpg" alt="石畳の階段"
+              <img src="img/7.png" alt="石畳の階段"
                 class="object-cover w-full h-full transition-all duration-1000 ease-out brightness-50 group-hover:brightness-100 group-hover:scale-105"
                 loading="lazy" />
               <div
@@ -266,7 +266,7 @@
           <!-- Gallery Item 3 -->
           <div class="reveal reveal-up group cursor-pointer" style="transition-delay: 100ms">
             <div class="relative overflow-hidden w-full bg-black aspect-[3/4]">
-              <img src="img/work3.jpg" alt="夜の街角"
+              <img src="img/6.png" alt="夜の街角"
                 class="object-cover w-full h-full transition-all duration-1000 ease-out brightness-50 group-hover:brightness-100 group-hover:scale-105"
                 loading="lazy" />
               <div
@@ -279,7 +279,7 @@
           <!-- Gallery Item 4 -->
           <div class="reveal reveal-up group cursor-pointer" style="transition-delay: 300ms">
             <div class="relative overflow-hidden w-full bg-black aspect-[3/4]">
-              <<img src="img/work4.jpg" alt="路地裏の猫"
+              <img src="img/4.png" alt="路地裏の猫"
                 class="object-cover w-full h-full transition-all duration-1000 ease-out brightness-50 group-hover:brightness-100 group-hover:scale-105"
                 loading="lazy" />
               <div
@@ -296,7 +296,7 @@
           <!-- Gallery Item 5 -->
           <div class="reveal reveal-up group cursor-pointer" style="transition-delay: 200ms">
             <div class="relative overflow-hidden w-full bg-black aspect-[3/4]">
-              <img src="img/work5.jpg" alt="群衆と音楽"
+              <img src="img/1.png" alt="群衆と音楽"
                 class="object-cover w-full h-full transition-all duration-1000 ease-out brightness-50 group-hover:brightness-100 group-hover:scale-105"
                 loading="lazy" />
               <div
@@ -309,7 +309,7 @@
           <!-- Gallery Item 6 -->
           <div class="reveal reveal-up group cursor-pointer" style="transition-delay: 400ms">
             <div class="relative overflow-hidden w-full bg-black aspect-[3/4]">
-              <img src="img/work6.jpg" alt="夕暮れのタクシー"
+              <img src="img/2.png" alt="夕暮れのタクシー"
                 class="object-cover w-full h-full transition-all duration-1000 ease-out brightness-50 group-hover:brightness-100 group-hover:scale-105"
                 loading="lazy" />
               <div
@@ -329,7 +329,7 @@
     <div class="max-w-5xl mx-auto flex flex-col md:flex-row gap-16 items-center">
       <div class="reveal reveal-right w-full md:w-1/2">
         <div class="relative aspect-[3/4] w-full max-w-md mx-auto">
-          <img src="img/profile.jpg" alt="SHU ARI Portrait" class="object-cover w-full h-full brightness-75"
+          <img src="img/profile-2.png" alt="SHU ARI Portrait" class="object-cover w-full h-full brightness-75"
             loading="lazy" />
           <!-- 装飾枠 -->
           <div class="absolute -inset-4 border border-white/10 hidden md:block"></div>
@@ -353,10 +353,10 @@
 
         <div class="reveal reveal-up" style="transition-delay: 400ms">
           <div class="pt-8 border-t border-white/10">
-            <p class="font-serif text-sm tracking-[0.15em] mb-4">AWARDS</p>
+            <p class="font-serif text-sm tracking-[0.15em] mb-4"></p>
             <ul class="space-y-2 font-serif text-xs text-white/60 tracking-wider">
-              <li>2023 - International Photography Awards / Honorable Mention</li>
-              <li>2021 - Tokyo Photo Festival / Newcomer Award</li>
+              <li></li>
+              <li></li>
             </ul>
           </div>
         </div>
@@ -397,7 +397,7 @@
       <div class="reveal reveal-up" style="transition-delay: 200ms">
         <div
           class="flex flex-col md:flex-row justify-between items-center pt-8 border-t border-white/10 gap-4 text-xs font-serif text-white/30 tracking-[0.1em]">
-          <p>&copy; 2026 Yukiya. M Photography. All Rights Reserved.</p>
+          <p>&copy; 2026 SHU ARI Photography. All Rights Reserved.</p>
           <button id="btn-back-to-top" class="hover:text-white transition-colors flex items-center gap-2">
             BACK TO TOP <i data-lucide="chevron-down" class="w-3 h-3 rotate-180"></i>
           </button>
