--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SHU ARI photo.n.movie.making | Documentary & Street Photographer</title>
+  <title>沖縄のドキュメンタリー・ストリート写真家 SHU ARI | Okinawa Photographer</title>
   <meta name="google-site-verification" content="6P7HaSW7ccI92Z8q0ktM5gSDIeejOFT3mNrf3Plm0Zo" />
   <meta name="description"
-    content="SHU ARIの公式ポートフォリオサイト。ドキュメンタリーやストリートを中心に、光と影が織りなすシネマティックな世界観を表現するフォトグラファー。作品・プロフィール・映像作品を掲載。">
+    content="沖縄を拠点に活動するドキュメンタリー・ストリート写真家 SHU ARIの公式サイト。沖縄・国内外でのポートレート、ストリートフォト、映像制作を手がける。撮影依頼受付中。Okinawa Photographer.">
   <meta property="og:title" content="SHU ARI photo.n.movie.making | Documentary & Street Photographer">
   <meta property="og:description" content="光と影が織りなすシネマティックな世界観を描くフォトグラファー。ドキュメンタリー・ストリート・映像作品を掲載。">
   <meta property="og:type" content="website">
@@ -146,12 +146,18 @@
 
     <!-- ヒーローテキスト -->
     <div class="relative z-10 text-center px-6 mix-blend-lighten">
+
+      <!-- SEO用H1（画面には表示されない） -->
+      <h1 class="sr-only">沖縄のドキュメンタリー・ストリート写真家 SHU ARI</h1>
+
       <div class="load-fade-up">
-        <h1
+        <!-- 表示用の見出しはH2にする -->
+        <h2
           class="font-serif text-4xl md:text-5xl lg:text-7xl tracking-[0.15em] leading-relaxed font-light mb-8 text-white/90">
           世界の片隅に落ちる光、<br class="md:hidden" />
           <span class="inline-block mt-4 md:mt-6">名もなき人々のドラマ。</span>
-        </h1>
+        </h2>
+
         <p class="font-serif text-sm md:text-base tracking-[0.2em] font-light text-white/60 mt-12 delay-700">
           DOCUMENTARY & STREET
         </p>
